# libbmeipc

./: AUTHORS  Makefile.am  configure.ac
debian/: changelog  control  copyright  rules
include/: bme_extmsg.h  bme_isa_def.h  bmeipc.h  bmeisa.h  bmemsg.h  client_ipc.h  em_isi.h
src/: bmeipc.c
